# 4a-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  commit_from_borislove.txt  variables.cmake
engine/include/: AnimatedTexture.hpp  CollisionDetector.hpp  Engine.hpp  Event.hpp  GameScene.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
engine/include/GameObject/: ControllableGameObject.hpp
engine/src/: AnimatedTexture.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CollisionDetector.cpp  CollisionDetector.hpp  Core.cpp  Event.hpp  FAETypes.hpp  FAEUtils.h  GameScene.cpp  GameScene.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp
engine/src/GameObject/: AnimatedGameObject.cpp  ControllableGameObject.cpp  ControllableGameObject.hpp  DynamicGameObject.cpp  DynamicGameObject.hpp  GameObject.cmake  GameObject.cpp  GameObject.hpp  StaticGameObject.cpp  StaticGameObject.hpp
engine/tests/Camera/: CameraTest.cmake
engine/tests/GameObject/: StaticGameObjectTest.cmake  StaticGameObjectTest.cpp
engine/tests/Shader/: GLShaderTest.cmake
engine/tests/Stub/: IndexBufferStub.cpp  Stub.cmake  TextureStub.cpp  VertexArrayStub.cpp  VertexBufferStub.cpp
engine/tests/VertexLayout/: VertexLayoutTest.cmake
game/: game.cpp
game/shaders/: fs.glsl
include/: AnimatedTexture.hpp  Camera.hpp  Control.hpp  Core.hpp  Engine.hpp  Event.hpp  GameObject.hpp  GameScene.hpp  GlShader.hpp  IControlable.hpp  IListenable.hpp  ImageProxy.hpp  IndexBuffer.hpp  KeyboardControl.hpp  Renderer.hpp  Settings.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
include/GameObject/: AnimatedGameObject.hpp  ControllableGameObject.hpp  DynamicGameObject.hpp  GameObject.hpp  StaticGameObject.hpp
lib/: AnimatedTexture.cpp  CMakeLists.txt  Camera.cpp  Control.cpp  Core.cpp  Event.cpp  GameObject.cpp  GameScene.cpp  GlShader.cpp  IControlable.cpp  IListenable.cpp  ImageProxy.cpp  IndexBuffer.cpp  KeyboardControl.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp  main.cpp
lib/GameObject/: AnimatedGameObject.cpp  ControllableGameObject.cpp  DynamicGameObject.cpp  GameObject.cmake  GameObject.cpp  StaticGameObject.cpp
res/: sprayt.sai  Сцена1_вар1.psd  Сцена2_вар2.psd
shaders/: fragment_shader.glsl  fs.glsl  vertex_shader.glsl  vs.glsl
src/: ShaderLoad.cpp  game.cpp  main.cpp
tests/: CMakeLists.txt  CameraTest.cpp  GameObjectTest.cpp  Lab5Test.cpp  TestGlShader.cpp  Tests.cmake  VertexLayoutTest.cpp  test.cpp
tests/Camera/: CameraTest.cmake
tests/GameObject/: StaticGameObjectTest.cmake
tests/Shader/: GLShaderTest.cmake  GlShaderTest.cpp
tests/Stub/: Stub.cmake
tests/VertexLayout/: VertexLayoutTest.cmake  VertexLayoutTest.cpp
