cmake_minimum_required(VERSION 3.0)
add_library(glshader ${LIB_DIR}/GlShader.cpp)
add_library(index-buffer ${LIB_DIR}/IndexBuffer.cpp)
add_library(vertex-buffer ${LIB_DIR}/VertexBuffer.cpp)
add_library(vertex-array ${LIB_DIR}/VertexArray.cpp)
add_library(vertex-layout ${LIB_DIR}/VertexLayout.cpp)
add_library(renderer ${LIB_DIR}/Renderer.cpp)
add_library(camera ${LIB_DIR}/Camera.cpp)
add_library(game-object ${LIB_DIR}/GameObject.cpp)
add_library(core ${LIB_DIR}/Core.cpp)
add_library(keyboard-control ${LIB_DIR}/KeyboardControl.cpp)
add_library(game-scene ${LIB_DIR}/GameScene.cpp)
add_library(event ${LIB_DIR}/Event.cpp)
add_library(texture ${LIB_DIR}/Texture.cpp)
add_library(icontrolable ${LIB_DIR}/Texture.cpp)